<resources>
    <!--<string name="app_name">Activity2</string>-->
    <!--string name="app_name">AppAndroid</string-->
    <string name="app_name">MNaCTeC App</string>
    <string name="texto">Caract 1\nCaract 2
        \nCaract 3
        \nCaract 4
        \nCaract 5
        \nCaract 6
        \nCaract 7
        \nCaract 8
        \nCaract 9
        \nCaract 10
        \nCaract 11
        \nCaract 12
        \nCaract 13</string>
    <string name="texto2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et egestas dolor. Nunc consectetur lobortis nisl a vehicula. Sed vel pulvinar nulla. Maecenas et condimentum purus, quis accumsan tortor. Quisque ultricies turpis ut metus lacinia porta. Proin placerat erat magna, id luctus nisi imperdiet eleifend. Nulla risus metus, aliquet a fringilla semper, porttitor id enim. Pellentesque iaculis ligula mauris, vitae gravida neque placerat condimentum. Mauris ultrices luctus quam, non pellentesque mi commodo nec. Proin nibh lorem, ullamcorper nec lectus non, commodo auctor elit. Quisque varius a justo ut suscipit. Nulla sit amet consectetur erat. Phasellus placerat dignissim risus, ac tempor libero eleifend nec. Cras quis lacinia diam. Integer malesuada metus tempor ultrices luctus.</string>
    <string name="fletxaEnrere" translatable="false">👈</string>
    <string name="fletxaEndavant" translatable="false">👉</string>
    <string name="midaTextHead">50sp</string>
    <string name="HeadActMain">ELEMENT ALEATORI DE L\'ÀMBIT</string>
    <string name="HeadAct1">ELEMENT MÉS PRÒXIM I TAL I PASQUAL</string>
    <string name="HeadAct2">NOM ELEMENT</string>
    <string name="HeadAct3">NOM ELEMENT</string>
    <string name="HeadAct4">ALTRES ELEMENTS</string>
    <string name="HeadAct5">DEMOSTRA ELS TEUS CONEIXEMENTS</string>

    <string name="HeadAct6CAT">Tria un nivell de dificultat</string>
    <string name="HeadAct6SPA">Elige un nivel de dificultad</string>
    <string name="HeadAct6ENG">Choose difficulty level</string>

    <string name="HeadActConAdmCAT">Opcions de l\'aplicació</string>
    <string name="HeadActConAdmSPA">Opciones de la aplicación</string>
    <string name="HeadActConAdmENG">App settings</string>

    <string name="HeadAct8">FI DE LA PARTIDA</string>

    <string name="btn_idioma">🌍 Idioma</string>
    <string name="btn_language">🌍 Language</string>

    <string name="creditsCAT">APP programada per:
        \n
        \nLeo Ferraz,
        \nMarc Lirón,
        \nPau Mateu,
        \nMarc Orobitg
        \ni Alex Saborit,
        \n
        \nalumnes del Centre d\'Estudis Politècnics de Barcelona durant el curs 2023–2024</string>
    <string name="creditsSPA">APP programada por:
        \n
        \nLeo Ferraz,
        \nMarc Lirón,
        \nPau Mateu,
        \nMarc Orobitg
        \ni Alex Saborit,
        \n
        \nalumnos del Centre d\'Estudis Politècnics de Barcelona durante el curso 2023–2024</string>
    <string name="creditsENG">APP programmed by:
        \n
        \nLeo Ferraz,
        \nMarc Lirón,
        \nPau Mateu,
        \nMarc Orobitg
        \nand Alex Saborit,
        \n
        \nstudents of the Centre d\'Estudis Politècnics from Barcelona during the schoolyear of 2023–2024</string>

    <string name="act1BtnFieldCAT">Veure tots els elements de l\'àmbit</string>
    <string name="act1BtnFieldSPA">Ver todos los elementos del ámbito</string>
    <string name="act1BtnFieldENG">See all this field\'s elements</string>

    <string name="btnChangeFieldCAT">Canviar d\'àmbit</string>
    <string name="btnChangeFieldSPA">Cambiar de ámbito</string>
    <string name="btnChangeFieldENG">Change field</string>

    <string name="btnFieldCAT">Veure elements de l\'àmbit</string>
    <string name="btnFieldSPA">Ver elementos del ámbito</string>
    <string name="btnFieldENG">See field\'s elements</string>

    <string name="DefaultFieldCAT">Tria l\'àmbit que es mostrarà per defecte: </string>
    <string name="DefaultFieldSPA">Elige el ámbito que se mostrará por defecto: </string>
    <string name="DefaultFieldENG">Choose the field to be shown by default: </string>

    <string name="btnPlayCAT">Demostra els teus coneixements</string>
    <string name="btnPlaySPA">Demuestra tus conocimientos</string>
    <string name="btnPlayENG">Prove your aknowledgement</string>

    <string name="btnIniciCAT">Tornar a l\'inici</string>
    <string name="btnIniciSPA">Regresar al inicio</string>
    <string name="btnIniciENG">Back to start</string>

    <string name="btnEasyCAT">Fàcil</string>
    <string name="btnEasySPA">Fácil</string>
    <string name="btnEasyENG">Easy</string>

    <string name="btnMediumCAT">Mitjà</string>
    <string name="btnMediumSPA">Medio</string>
    <string name="btnMediumENG">Medium</string>

    <string name="btnDificil">Difícil</string>
    <string name="btnHard">Hard</string>

    <string name="btnAdvOptCAT">Opcions Avançades</string>
    <string name="btnAdvOptSPA">Opciones Avanzadas</string>
    <string name="btnAdvOptENG">Advanced Settings</string>

    <string name="btnImportJsonCAT">Importar arxius .JSON des d\'una carpeta</string>
    <string name="btnImportJsonSPA">Importar arxivos .JSON des de una carpeta</string>
    <string name="btnImportJsonENG">Import .JSON files from a folder</string>

    <string name="btnImportImgElemCAT">Importar imatges d\'elements des d\'una carpeta</string>
    <string name="btnImportImgElemSPA">Importar imágenes de elementos desde una carpeta</string>
    <string name="btnImportImgElemENG">Import images of elements from a folder</string>

    <string name="btnImportImgGameCAT">Importar imatges del joc des d\'una carpeta</string>
    <string name="btnImportImgGameSPA">Importar imágenes del juego desde una carpeta</string>
    <string name="btnImportImgGameENG">Import game\'s images from a folder</string>

    <string name="btnImportImgPrizeCAT">Importar imatges de puntuació del joc des d\'una carpeta</string>
    <string name="btnImportImgPrizeSPA">Importar imágenes de puntuación del juego desde una carpeta</string>
    <string name="btnImportImgPrizeENG">Import score images of the game from a folder</string>

    <string name="gameNoImagesCAT">No es pot iniciar el joc, si us plau importeu les imatges del joc</string>
    <string name="gameNoImagesSPA">No se puede iniciar el juego, por favor importa las imágenes del juego</string>
    <string name="gameNoImagesENG">Game can not be started, please import the game\'s images</string>

    <string name="textViewTituloCAT">Opcions Avançades</string>
    <string name="textViewTituloSPA">Opciones Avanzadas</string>
    <string name="textViewTituloENG">Advanced Options</string>

    <string name="editTextNombreUsuarioCAT">nom</string>
    <string name="editTextNombreUsuarioSPA">nombre</string>
    <string name="editTextNombreUsuarioENG">name</string>

    <string name="editTextContraseñaCAT">contrasenya</string>
    <string name="editTextContraseñaSPA">contraseña</string>
    <string name="editTextContraseñaENG">password</string>

    <string name="btnAccederCAT">accedir</string>
    <string name="btnAccederSPA">acceder</string>
    <string name="btnAccederENG">access</string>


</resources>