<?xml version="1.0" encoding="utf-8"?>
<!-- Useu aquesta activity com a plantilla -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/botonatras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/fletxaEnrere"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/act1FrameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/HeadAct1"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/botonpasar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/fletxaEndavant"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>