<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigAdmin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/actConAdmFrameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/HeadActConAdmCAT"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="20dp"
                >
                <Button
                    android:id="@+id/openFolderJson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnImportJsonCAT"
                    />
                <Button
                    android:id="@+id/openFolderImagesElements"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnImportImgElemCAT"
                    android:layout_marginVertical="20dp"
                    />
                <Button
                    android:id="@+id/openFolderImagesGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnImportImgGameCAT"
                    />

                <!--TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="tria el json d'àmbits:"/-->
                <!--Button
                    android:id="@+id/openFileButtonAmbits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cercar arxiu json d'àmbits NO PROGRAMAT"/-->
                <!--TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="tria els json d'elements:"/-->
                <!--Button
                    android:id="@+id/openFileButtonElementsCat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cercar arxiu json d'elements en català"/-->
                <!--Button
                    android:id="@+id/openFileButtonElementsSpa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cercar arxiu json d'elements en castellà"/-->
                <!--Button
                    android:id="@+id/openFileButtonElementsEng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cercar arxiu json d'elements en anglès"/-->

                <!--Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Triar àmbit i element per defecte NO PROGRAMAT"/-->

                <!--TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="tria el json de preguntes:"/-->
                <!--Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="cercar json de preguntes NO PROGRAMAT"/-->
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="20dp">
                    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="10"
                        android:padding="20dp">
                    <TextView
                        android:id="@+id/TvChooseField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/DefaultFieldCAT"/>
                    <Spinner
                        android:id="@+id/spinnerField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="20dp">
                    <TextView
                        android:id="@+id/TvCredits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/creditsCAT"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="0"
            android:gravity="bottom|center"
            android:orientation="horizontal"
            android:layout_marginVertical="15dp">

            <Button
                android:id="@+id/btnMainScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/btnIniciCAT" />
            <Button
                android:id="@+id/btnList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/btnFieldCAT" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>